<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <TextView
            android:text="@string/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewTitle"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/editTextTitle"
            android:textSize="20sp"
            android:ems="10"
            android:id="@+id/editTextTitle"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutDate"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <TextView
            android:text="@string/textViewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewDate"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewDateChoose"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <TextView
            android:text="@string/textViewSort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewSort"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:text="@string/textViewSortKind"
            android:gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewSortKind"
            android:layout_weight="1"
            android:textSize="20sp"
            android:clickable="true"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <Switch
            android:text="@string/switchRepeat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/switch1"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"/>


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/textViewNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewNote"
            android:textSize="20sp"
            android:layout_weight="1"
            android:textColor="@color/colorAccent"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/editTextNote"
            android:ems="10"
            android:textSize="20sp"
            android:id="@+id/editTextNote"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="@string/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonBack"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:onClick="onClick"/>

        <Button
            android:text="@string/buttonComplete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonComplete"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:onClick="onClick"/>
    </LinearLayout>

</LinearLayout>