<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:text="@string/from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonGapStart"
            android:onClick="onClick"/>

        <TextView
            android:text="@string/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView25" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:text="@string/distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView26" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonGapEnd"
            android:onClick="onClick"/>

        <TextView
            android:text="@string/with"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView27" />
    </TableRow>

    <TextView
        android:text="TextView"
        android:textSize="30sp"
        android:textColor="@color/red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:id="@+id/textViewGap" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:text="@string/from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView24" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonBeforeAfter"
            android:onClick="onClick"/>

        <TextView
            android:text="@string/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:text="@string/defult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonBefore"
            android:onClick="onClick"/>

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewBefore" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:text="@string/defult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonAfter"
            android:onClick="onClick"/>

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewAfter" />

    </TableRow>
</TableLayout>